===v8.0.0===
====IMPORTANT: Legion Beta====
* Welcome to the TellMeWhen, Legion edition!
* Known issues:
** External resources (fonts, textures, sounds) are currently disabled by Blizzard. As a result, some things (like the changelog) will look pretty bad.

====IMPORTANT: Breaking Changes====
* The Primary/Secondary spec group settings are gone, and the way that spec settings were stored has changed.
** There is a small chance you will need to reconfigure the spec and tree settings on all your groups.
* Most of your old color settings were lost.

* The Update Order settings have been removed.
** Try replacing usages of the Expand sub-metas setting with Group Controller meta icons if you experience issues.

* Each of the pairs of Opacity and Shown Icon Sorting methods have been merged.

====General====
* All TellMeWhen configuration is now done in the icon editor.

* Color configuration has been completely revamped. It is now done on each icon.
** Duration Requirements, Stack Requirements, and Conditions Failed opacities now use Opactiy & Color settings.
** Out of Range & Out Of Power settings now use Opactiy & Color settings.
** You can also set a custom texture for each of your Opacity & Color settings.

* New conditions have been added for checking your current location.

===v7.4.0===
* Bar and Vertical Bar groups now have several new options:
** Show/Hide Icon
** Flip Icon
** Bar & Icon Borders

===v7.3.5===
====Bug Fixes====
* The TMWFormatDuration DogTag now properly handles negative durations.

===v7.3.4===
* Blizzard's new completion pulse animation on cooldown sweeps is now disabled by default, and can be enabled in TMW's main options.

====Bug Fixes====
* Power Bar Overlays should function once again.

===v7.3.3===
* Unit Cooldown icons can now filter spells based on the known class spells of a unit.

====Bug Fixes====
* Fixed: Condition_THREATSCALED: Usage: UnitDetailedThreatSituation("unit" [, "mob"])

===v7.3.1===
====Bug Fixes====