@@ -28,7 +28,7 @@ local isNumber = TMW.isNumber
 local Type = TMW.Classes.IconType:New("buffcheck")
 Type.name = L["ICONMENU_BUFFCHECK"]
 Type.desc = L["ICONMENU_BUFFCHECK_DESC"]
-Type.menuIcon = GetSpellTexture(21562)
+Type.menuIcon = GetSpellTexture(111922)
 Type.usePocketWatch = 1
 Type.unitType = "unitid"
 Type.hasNoGCD = true
